[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/key.png" type="Texture" id=1]
[ext_resource path="res://scripts/Key.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.525997, 4.07974 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.00762, 6.99026 )

[node name="Key" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
"menor",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="ChangeDir" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ChangeDir" to="." method="_on_ChangeDir_timeout"]
